166214111-story(user): edit user profile
-create route to edit user profile

[Finishes #166214111]
